adding new homepage

--- a/src/modules/shared/Shared_Styles/_vars.scss
+++ b/src/modules/shared/Shared_Styles/_vars.scss
@@ -3,6 +3,7 @@ $desktop-min-width: 1200px;
 $desktopPlus-min-width: 1201px;
 $gray-surface: #161827;
 $gray-surface-secondary: #323542;
+$total-black: #000;
 $black-main: #0F1121;
 $gray-elements: #3B3E4A;
 $gray-elements-secondary: #4A4D58;
